--- a/a1.html
+++ b/a1.html
@@ -14,31 +14,39 @@
     <script src="js/SourceLoader.js"></script>
     <script src="js/OrbitControls.js"></script>
     <script src="js/KeyboardState.js"></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
+    <script src='js/threex.dynamictexture.js'></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
 
-<script id="armadilloVertexShader" type="x-shader/x-vertex">
-varying vec3 varyingNormal;
-void main()
-{
-        varyingNormal = normal;
-	vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
-	gl_Position = projectionMatrix * mvPosition;
-}
-</script>
+    <!-- <script src="bower_components/threex.dynamictexture/threex.dynamictexture.js"></script> -->
 
-<script id="armadilloFragmentShader" type="x-shader/x-fragment">
-uniform sampler2D floorTexture;
-varying vec3 varyingNormal;
-void main( void ) {
+    <script id="armadilloVertexShader" type="x-shader/x-vertex">
+    varying vec3 varyingNormal;
+    void main()
+    {
+      varyingNormal = normal;
+      vec4 mvPosition = modelViewMatrix * vec4( position, 1.0 );
+      gl_Position = projectionMatrix * mvPosition;
+    }
+    </script>
 
-    // Set final rendered color according to the surface normal
-    vec3 N = normalize(varyingNormal);
-    // vec3 N = vec3(1.0,0.0,0.0);
-    gl_FragColor = vec4(N.x,N.y,N.z, 1.0);
-}
-</script>
+    <script id="armadilloFragmentShader" type="x-shader/x-fragment">
+    uniform sampler2D floorTexture;
+    varying vec3 varyingNormal;
+    void main( void ) {
+
+      // Set final rendered color according to the surface normal
+      vec3 N = normalize(varyingNormal);
+      // vec3 N = vec3(1.0,0.0,0.0);
+      vec3 L = vec3(0.0, 0.0, -1.0);
+      // console.log('here');
+      float i = dot(N, L);
+      // console.log(i);
+      gl_FragColor = vec4(i ,i ,i , 1.0);
+      // gl_FragColor = vec4(N.x,N.x,N.z, 1.0)
+    }
+    </script>
 
 
-<script src="a1.js"></script>
+    <script src="a1.js"></script>
 
 </body>
 </html>
