--- a/a1.html
+++ b/a1.html
@@ -15,7 +15,7 @@
     <script src="js/OrbitControls.js"></script>
     <script src="js/KeyboardState.js"></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
     <script src='js/threex.dynamictexture.js'></script> <!-- By Jerome Etienne: http://jetienne.com/ -->
-
+    <script src="js/Tween.js"></script>
     <!-- <script src="bower_components/threex.dynamictexture/threex.dynamictexture.js"></script> -->
 
     <script id="armadilloVertexShader" type="x-shader/x-vertex">
