--- a/index.html
+++ b/index.html
@@ -132,7 +132,18 @@ varying vec3 vcsPosition;
 void main( void ) {
 
   vec3 N = normalize(vcsNormal);
-  gl_FragColor = vec4(N,1.0);
+  vec3 I = normalize(vcsPosition - ocsPosition);
+  vec3 R = reflect(I , N);
+  vec4 vec = vec4(R.x, R.y, R.z, 0.0);
+  vec4 newvec = matrixWorld*vec;
+
+  if(newvec.y >= abs(newvec.x) && newvec.y >= abs(newvec.z)){
+    float v = (-newvec.z / newvec.y + 1.0) / 2.0;
+    float u = (-newvec.x / newvec.y + 1.0) / 2.0;
+    gl_FragColor = texture2D(uPosyTexture, vec2(u,v));
+  }
+
+  // gl_FragColor = vec4(N,1.0);
 }
 </script>
 
@@ -149,7 +160,10 @@ varying vec2 vUv;
 void main( void ) {
   vec3 normal = normalize(2.0 * (texture2D(normalMap, vUv).rgb - 0.5));
   vec3 L = normalize(lightPosition - vcsPosition);
-  //normal.rotateX(90);
+  mat3 rotateX = mat3(1.0, 0.0, 0.0,
+                  0.0, -0.45, -0.89,
+                  0.0,  0.89, -0.45);
+  normal = rotateX * normal;
   vec3 color = texture2D(textureMap, vUv).xyz;
   float i = dot(normal, L);
   gl_FragColor = vec4(color*i,1.0);
