--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>CPSC 314 Assignment 5 Sep 2018</title>
+    <title>ThreeJS Skybox</title>
     <style>
       body { margin: 0; } canvas {width: 100%;
       height: 100% }
@@ -261,7 +261,7 @@ void main( void ) {
 }
 </script>
 
-<script src="a5.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
 
